@@ -1,7 +1,7 @@
 [Desktop Entry]
-_Name=Mouse
+_Name=Windows
 _Comment=Window Properties
-Exec=gnome2-window-properties
+Exec=gnome-window-properties
 Icon=window-capplet.png
 Terminal=0
 Type=Application
