@@ -1,5 +1,15 @@
 2002-05-10  Seth Nickell  <snickell@stanford.edu>
 
+	* gnome-window-properties.c: (setup_dialog), (main):
+
+	Hook titlebar font into GConf key.
+
+	* window-properties.desktop.in:
+
+	Set title in .desktop file.
+	
+2002-05-10  Seth Nickell  <snickell@stanford.edu>
+
 	* gnome-window-properties.c: (set_wm_change_pending),
 	(state_changed), (create_dialog):
 	* gnome-window-properties.glade:
